[gd_scene load_steps=10 format=3 uid="uid://cpqchns3vptg7"]

[ext_resource type="Texture2D" uid="uid://3ions2qmibne" path="res://assets/art/props/1p.png" id="1_7er0s"]
[ext_resource type="Script" uid="uid://dxmc6f2f76dsi" path="res://scenes/screens/team_selection/flag_selector.gd" id="1_irl4t"]
[ext_resource type="Texture2D" uid="uid://bkhjl2k11y6sx" path="res://assets/art/ui/flags/flag-selection.png" id="2_7p6sr"]
[ext_resource type="Texture2D" uid="uid://3fr2neobto5s" path="res://assets/art/props/2p.png" id="2_irl4t"]
[ext_resource type="Texture2D" uid="uid://bffmkuwljpf3v" path="res://assets/art/props/cpu.png" id="4_52pv5"]

[sub_resource type="Animation" id="Animation_irl4t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_52pv5"]
resource_name = "selected"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7p6sr"]
resource_name = "selecting"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ydcjm"]
_data = {
&"RESET": SubResource("Animation_irl4t"),
&"selected": SubResource("Animation_52pv5"),
&"selecting": SubResource("Animation_7p6sr")
}

[node name="FlagSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irl4t")

[node name="Indicator1P" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -4.0
offset_top = -18.0
offset_right = 11.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("1_7er0s")
stretch_mode = 2

[node name="Indicator2P" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = -18.0
offset_right = 33.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("2_irl4t")
stretch_mode = 2

[node name="IndicatorCPU" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = -18.0
offset_right = 34.0
offset_bottom = -7.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("4_52pv5")
stretch_mode = 2

[node name="Border" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 46.0
offset_bottom = 30.0
texture = ExtResource("2_7p6sr")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ydcjm")
}
autoplay = "selecting"
